<resources>
    <string name="app_name">BookProject</string>
    <string name="title">Registro de un libro</string>
    <string name="name">Nombre:</string>
    <string name="book_name">Nombre:</string>
    <string name="name_book_edit"> </string>
    <string name="autor_book">Autor:</string>
    <string name="pages">Número de páginas:</string>
    <string name="Resumen">Resumen:</string>
    <string name="guardar_botton">Guardar</string>
    <string name="Information">Informacion</string>
    <string name="info">"Nombre: %s \nAutor: %s \nPáginas: %d \nResumen: %s\nGénero(s): %s \nCalificación: %d \nFecha de publicación: %s \n\n </string>
    <string name="genere">Género</string>
    <string name="suspence">Suspenso</string>
    <string name="terror">Terror</string>
    <string name="infaltile">Infantil</string>
    <string name="comic">Comedia</string>
    <string name="score">Calificación</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="publication_date">Fecha de publicación</string>
    <string name="date_format">dd-mm-yyyy</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Img_splash" />
    <string name="email">Correo electrónico:</string>
    <string name="password">Contraseña:</string>
    <string name="sing_in">Iniciar Sesión</string>
    <string name="does_not_have_account"><u>¡No tienes cuenta Registrate!</u></string>
    <string name="rep_password">Repita la contraseña:</string>
    <string name="Register">Registrar</string>
    <string name="sing_out">Cerrar sesión</string>
    <string name="titulo_operaciones">Operaciones</string>
    <string name="msg_number_one">Digite un número:</string>
    <string name="calculate">Calcular</string>
    <string name="total_example">La suma es: 15</string>
    <string name="calculo"><u>Quieres hacer un cálculo</u></string>
    <string name="example_title">El psicoanalista</string>
    <string name="example_author">Jhon Kat</string>

</resources>